--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
