--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/react": "18.3.11"
+    "@types/node": "^22.7.7",
+    "@types/react": "18.3.11",
+    "typescript": "^5.6.3"
   }
 }
